--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ install:
   - "pip install -r test_requirements.txt --use-mirrors"
   - "python setup.py develop"
 before_script: 
-  - "flake8 billy --ignore=E501,W291,W293"
+  - "flake8 billy_client --ignore=E501,W291,W293"
 # command to run tests
 script: "python setup.py nosetests"
